# ratacats-skills

./: .gitignore  AGENTS.md  README.md
.claude-plugin/: marketplace.json
plugins/brave-search/skills/brave-search/: .gitignore  AGENTS-BLURB.md  SKILL.md  brave.py  pyproject.toml
plugins/brave-search/skills/brave-search/src/brave_search/: __init__.py  cli.py
skills/: agent-browser  annas-archive-ebooks  beautiful-mermaid-ascii  brave-search  caveman  clarify  data-systems-architecture  debugging  deepen-plan  design-patterns  diagnose  dianalokada  duris-game-knowledge  duris-group-combat  ebook-extractor  failure-modes  frontend-design  graph-researcher  grill-me  grill-with-docs  human-tweet-editor  improve-codebase-architecture  kalshi-prediction-market  medium-paywall-bypass  name-review  pm-deep-analysis  pm-market-analysis  pm-mispricing-analysis  pm-situation-framing  polymarket-event-research  postgres-query-expert  process-research  run-simulations  senior-architect  setup-matt-pocock-skills  spec-flow-analyzer  systematic-debugging  tdd  to-issues  to-prd  (+6 more)
skills/annas-archive-ebooks/: SKILL.md  annas.py
skills/ansi-art/: README.md  SKILL.md  agents  references
skills/clarify/: README.md  SKILL.md  agents
skills/conjecture-cascade/: README.md  SKILL.md
skills/dianalokada/: README.md  SKILL.md
skills/duris-game-knowledge/: README.md  SKILL.md
skills/duris-group-combat/: README.md  SKILL.md
skills/ebook-extractor/: SKILL.md  requirements.txt  scripts  setup.sh
skills/failure-modes/: SKILL.md
skills/gpt-pro-loop/: README.md  SKILL.md  agents  (+1 more)
(+204 files in other folders)
