[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brave-search-cli"
version = "1.0.0"
description = "Brave Search API CLI client for web, image, news search and AI grounding"
readme = "SKILL.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["brave", "search", "api", "cli", "web-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
brave-search = "brave_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
